# consensus-essence

./: CN.md  Makefile  README.md  mlc_config.json
.github/workflows/: build-wechat.yml  build.yml  gpt-translate-trigger.yml
_wechat/: CN.md  README.md
src/: CN.md  README.md
src/cn-list/: asymmetric-paxos.md  paxos-partial-order-rnd.md  paxos-revert-rnd.md
src/list/: Makefile  asymmetric-paxos.md  asymmetric-paxos.tldr  classic-paxos-forget-decided-value.md  paxos-revert-rnd.tldr  raft-leader-step-down.md  raft-without-term.md
src/list/asymmetric-paxos/: asymmetric-paxos.cn.md  asymmetric-paxos.md
src/list/classic-paxos-forget-decided-value/: classic-paxos-forget-decided-value.cn.md  classic-paxos-forget-decided-value.md
src/list/paxos-2pc/: apaxos.md  paxos-2pc.md  paxos-2pc.tldr
src/list/raxos/protocal/: .gitignore  Cargo.toml  rust-toolchain  rustfmt.toml
src/list/raxos/protocal/src/: lib.rs
src/list/raxos/protocal/src/apaxos/: acceptor.rs  branch.rs  decided.rs  errors.rs  focal_history.rs  greater_equal.rs  greater_equal_map.rs  history.rs  history_view.rs  mod.rs  ptime.rs
src/list/raxos/protocal/src/apaxos/proposer/: mod.rs  phase1.rs  phase2.rs
src/list/raxos/protocal/src/commonly_used/: distribute.rs  history_view.rs  mod.rs  time.rs  transport.rs  value.rs
src/list/raxos/protocal/src/commonly_used/history/: generic.rs  linear.rs  mod.rs  one_slot.rs
src/list/raxos/protocal/src/commonly_used/time/: vec_2d.rs
src/list/raxos/protocal/src/implementations/: mod.rs  paxos.rs  two_pc.rs
src/scripts/: img-add-margin.sh
(+28 files in other folders)
