[package]
name = "abstract-paxos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
async-executor = { version = "1.13.1" }
async-trait = { version = "0.1.83" }
#futures = { version = "0.3.30" }
futures-lite = "2.3.0"
thiserror = { version = "1.0.63" }
validit = { version = "0.2.4" }


[dev-dependencies]
maplit = "1.0.2"
